...
                    }
                    .buttonStyle(MMSecondaryButtonStyle())
                    .padding(.horizontal, 40)
                    .padding(.bottom, 48)
                } else {
                    NavigationLink(destination: TodaysRoutineView()) {
                        Text("Start Today's Routine")
                    }
                    .buttonStyle(MMPrimaryButtonStyle())
                    .padding(.horizontal, 40)
                    .padding(.bottom, 48)
                }
            }
...
